traffic-sample1/app-v2.yaml

##################################################################################################
# service1
##################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service1
      version: v2
  template:
    metadata:
      labels:
        app: service1
        version: v2
    spec:
      containers:
      - name: service1
        image: registry.cn-beijing.aliyuncs.com/istio-samples/mirrorservice:rev-dep-call
        imagePullPolicy: Always
        ports:
        - containerPort: 5678
---
##################################################################################################
# service2
##################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service2
      version: v2
  template:
    metadata:
      labels:
        app: service2
        version: v2
    spec:
      containers:
      - name: service2
        image: registry.cn-beijing.aliyuncs.com/istio-samples/mirrorservice:rev-dep-call
        imagePullPolicy: Always
        ports:
        - containerPort: 5678
---
##################################################################################################
# service3
##################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service3-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service3
      version: v2
  template:
    metadata:
      labels:
        app: service3
        version: v2
    spec:
      containers:
      - name: service3
        image: registry.cn-beijing.aliyuncs.com/istio-samples/mirrorservice:rev-dep-call
        imagePullPolicy: Always
        ports:
        - containerPort: 5678       
---
##################################################################################################
# service4
##################################################################################################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: service4-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service4
      version: v2
  template:
    metadata:
      labels:
        app: service4
        version: v2
    spec:
      containers:
      - name: service4
        image: registry.cn-beijing.aliyuncs.com/istio-samples/mirrorservice:rev-dep-call
        imagePullPolicy: Always
        ports:
        - containerPort: 5678        
---
##################################################################################################
# service5
##################################################################################################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: service5-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service5
      version: v2
  template:
    metadata:
      labels:
        app: service5
        version: v2
    spec:
      containers:
      - name: service5
        image: registry.cn-beijing.aliyuncs.com/istio-samples/mirrorservice:rev-dep-call
        imagePullPolicy: Always
        ports:
        - containerPort: 5678
