traffic-sample1/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service1
spec:
  host: service1
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2    
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service2
spec:
  host: service2
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2     
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service3
spec:
  host: service3
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2     
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service4
spec:
  host: service4
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2     
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service5
spec:
  host: service5
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2     
---
